Use forced-color-adjust to fix high contrast mode (resolves #2482)

--- a/css/core.less
+++ b/css/core.less
@@ -260,6 +260,11 @@
             draw at some zoom levels, but setting the transform triggers
             the hardware accelerated path, which works */
     transform: translate(0, 0);
+    forced-color-adjust: preserve-parent-color;
+  }
+
+  @media (forced-colors: active) {
+    min-height: 0px;
   }
 }
 
@@ -291,6 +296,13 @@
             draw at some zoom levels, but setting the transform triggers
             the hardware accelerated path, which works */
     transform: translate(0, 0);
+    forced-color-adjust: preserve-parent-color;
+  }
+
+  @media (forced-colors: active) {
+    &:after {
+      background: white !important;
+    }
   }
 
   &:after {
@@ -377,6 +389,8 @@
   user-select: none;
 
   width: min-content;
+
+  forced-color-adjust: preserve-parent-color;
 
   .style-wrap {
     position: relative;
